@@ -67,6 +67,12 @@ specifier|final
 name|long
 name|startPointer
 decl_stmt|;
+DECL|field|valueMask
+specifier|private
+specifier|final
+name|long
+name|valueMask
+decl_stmt|;
 DECL|method|DirectPackedReader
 specifier|public
 name|DirectPackedReader
@@ -101,6 +107,32 @@ operator|.
 name|getFilePointer
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|bitsPerValue
+operator|==
+literal|64
+condition|)
+block|{
+name|valueMask
+operator|=
+operator|-
+literal|1L
+expr_stmt|;
+block|}
+else|else
+block|{
+name|valueMask
+operator|=
+operator|(
+literal|1L
+operator|<<
+name|bitsPerValue
+operator|)
+operator|-
+literal|1
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -144,15 +176,6 @@ name|elementPos
 argument_list|)
 expr_stmt|;
 specifier|final
-name|byte
-name|b0
-init|=
-name|in
-operator|.
-name|readByte
-argument_list|()
-decl_stmt|;
-specifier|final
 name|int
 name|bitPos
 init|=
@@ -165,91 +188,83 @@ operator|&
 literal|7
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|bitPos
-operator|+
-name|bitsPerValue
-operator|<=
-literal|8
-condition|)
-block|{
-comment|// special case: all bits are in the first byte
-return|return
-operator|(
-name|b0
-operator|&
-operator|(
-operator|(
-literal|1L
-operator|<<
-operator|(
-literal|8
-operator|-
-name|bitPos
-operator|)
-operator|)
-operator|-
-literal|1
-operator|)
-operator|)
-operator|>>>
-operator|(
-literal|8
-operator|-
-name|bitPos
-operator|-
-name|bitsPerValue
-operator|)
-return|;
-block|}
-comment|// take bits from the first byte
+comment|// round up bits to a multiple of 8 to find total bytes needed to read
+specifier|final
 name|int
-name|remainingBits
+name|roundedBits
 init|=
-name|bitsPerValue
-operator|-
-literal|8
-operator|+
+operator|(
+operator|(
 name|bitPos
+operator|+
+name|bitsPerValue
+operator|+
+literal|7
+operator|)
+operator|&
+operator|~
+literal|7
+operator|)
+decl_stmt|;
+comment|// the number of extra bits read at the end to shift out
+name|int
+name|shiftRightBits
+init|=
+name|roundedBits
+operator|-
+name|bitPos
+operator|-
+name|bitsPerValue
 decl_stmt|;
 name|long
-name|result
-init|=
-operator|(
-name|b0
-operator|&
-operator|(
-operator|(
-literal|1L
-operator|<<
-operator|(
-literal|8
-operator|-
-name|bitPos
-operator|)
-operator|)
-operator|-
-literal|1
-operator|)
-operator|)
-operator|<<
-name|remainingBits
+name|rawValue
 decl_stmt|;
-comment|// add bits from inner bytes
-while|while
+switch|switch
 condition|(
-name|remainingBits
-operator|>=
-literal|8
+name|roundedBits
+operator|>>>
+literal|3
 condition|)
 block|{
-name|remainingBits
-operator|-=
-literal|8
+case|case
+literal|1
+case|:
+name|rawValue
+operator|=
+name|in
+operator|.
+name|readByte
+argument_list|()
 expr_stmt|;
-name|result
-operator||=
+break|break;
+case|case
+literal|2
+case|:
+name|rawValue
+operator|=
+name|in
+operator|.
+name|readShort
+argument_list|()
+expr_stmt|;
+break|break;
+case|case
+literal|3
+case|:
+name|rawValue
+operator|=
+operator|(
+operator|(
+name|long
+operator|)
+name|in
+operator|.
+name|readShort
+argument_list|()
+operator|<<
+literal|8
+operator|)
+operator||
 operator|(
 name|in
 operator|.
@@ -258,20 +273,145 @@ argument_list|()
 operator|&
 literal|0xFFL
 operator|)
-operator|<<
-name|remainingBits
 expr_stmt|;
-block|}
-comment|// take bits from the last byte
-if|if
-condition|(
-name|remainingBits
-operator|>
-literal|0
-condition|)
-block|{
-name|result
-operator||=
+break|break;
+case|case
+literal|4
+case|:
+name|rawValue
+operator|=
+name|in
+operator|.
+name|readInt
+argument_list|()
+expr_stmt|;
+break|break;
+case|case
+literal|5
+case|:
+name|rawValue
+operator|=
+operator|(
+operator|(
+name|long
+operator|)
+name|in
+operator|.
+name|readInt
+argument_list|()
+operator|<<
+literal|8
+operator|)
+operator||
+operator|(
+name|in
+operator|.
+name|readByte
+argument_list|()
+operator|&
+literal|0xFFL
+operator|)
+expr_stmt|;
+break|break;
+case|case
+literal|6
+case|:
+name|rawValue
+operator|=
+operator|(
+operator|(
+name|long
+operator|)
+name|in
+operator|.
+name|readInt
+argument_list|()
+operator|<<
+literal|16
+operator|)
+operator||
+operator|(
+name|in
+operator|.
+name|readShort
+argument_list|()
+operator|&
+literal|0xFFFFL
+operator|)
+expr_stmt|;
+break|break;
+case|case
+literal|7
+case|:
+name|rawValue
+operator|=
+operator|(
+operator|(
+name|long
+operator|)
+name|in
+operator|.
+name|readInt
+argument_list|()
+operator|<<
+literal|24
+operator|)
+operator||
+operator|(
+operator|(
+name|in
+operator|.
+name|readShort
+argument_list|()
+operator|&
+literal|0xFFFFL
+operator|)
+operator|<<
+literal|8
+operator|)
+operator||
+operator|(
+name|in
+operator|.
+name|readByte
+argument_list|()
+operator|&
+literal|0xFFL
+operator|)
+expr_stmt|;
+break|break;
+case|case
+literal|8
+case|:
+name|rawValue
+operator|=
+name|in
+operator|.
+name|readLong
+argument_list|()
+expr_stmt|;
+break|break;
+case|case
+literal|9
+case|:
+comment|// We must be very careful not to shift out relevant bits. So we account for right shift
+comment|// we would normally do on return here, and reset it.
+name|rawValue
+operator|=
+operator|(
+name|in
+operator|.
+name|readLong
+argument_list|()
+operator|<<
+operator|(
+literal|8
+operator|-
+name|shiftRightBits
+operator|)
+operator|)
+operator||
+operator|(
 operator|(
 name|in
 operator|.
@@ -281,15 +421,33 @@ operator|&
 literal|0xFFL
 operator|)
 operator|>>>
-operator|(
-literal|8
-operator|-
-name|remainingBits
+name|shiftRightBits
 operator|)
 expr_stmt|;
+name|shiftRightBits
+operator|=
+literal|0
+expr_stmt|;
+break|break;
+default|default:
+throw|throw
+operator|new
+name|AssertionError
+argument_list|(
+literal|"bitsPerValue too large: "
+operator|+
+name|bitsPerValue
+argument_list|)
+throw|;
 block|}
 return|return
-name|result
+operator|(
+name|rawValue
+operator|>>>
+name|shiftRightBits
+operator|)
+operator|&
+name|valueMask
 return|;
 block|}
 catch|catch
